feat(auth): require email verification before user account creation
- Added verification code based registration
- Prevent user creation until email is verified
- Improved registration security
will environment variables